# koozersite

./: .gitignore  index.html  index.js  manage.py  pyproject.toml  style.css
fastapi_demo/: main.py
koozersite/: urls.py  wsgi.py
polls/: models.py
polls/migrations/: 0001_initial.py
