[tool.poetry]
name = "koozersite"
version = "0.1.0"
description = ""
authors = ["Callum Clarke <callum.clarke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
